# py-ptsl

./: .flake8  .gitignore  .readthedocs.yml  CONTRIBUTING.md  INSTALLING.md  LICENSE  README.md  build_proto.sh  codecov.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yaml  lint_and_pytest.yml  pylint-and-flake8.yml  python-app.yml  python-publish.yaml
doc/: conf.py  errata.rst  implementation.rst  ptls_versions.rst
doc/source/: conf.py  engine.rst  enums.rst  errata.rst  implementation.rst  index.rst  ptsl_versions.rst  types.rst  utils.rst
docs/: conf.py
docs/source/: builders.rst  command.rst  conf.py  errata.rst  getting-started.rst  implementation.rst  index.rst  ptsl_versions.rst  types.rst  utils.rst
examples/: bounce.py  get_text.py  make_session.py  print_tracks.py  pt_pasteboard.py  pt_set.py  session_info.py  spot_sound.py  tool.bash  toolshell.py
ptsl/: PTSL_pb2.py  PTSL_pb2.pyi  PTSL_pb2_grpc.py  __init__.py  __main__.py  client.py  engine.py  errors.py  util.py
ptsl/builders/: create_session_builder.py  export_text_builder.py  import_builder.py
ptsl/ops/: __init__.py  authorize_connection.py  clear.py  clear_all_memory_locations.py  clear_special.py  clear_undo_queue.py  close_session.py  consolidate_clip.py  copy.py  copy_special.py  create_fades_based_on_preset.py  create_new_tracks.py  create_session.py  cut.py  cut_special.py  duplicate_selection.py  edit_mode.py  edit_tool.py  export_clips_as_files.py  export_mix.py  export_selected_tracks_as_aaf_omf.py  export_session_info_as_text.py  extend_selection_to_target_tracks.py  get_dyamic_properties.py  get_dynamic_properties.py  get_edit_mode.py  get_edit_mode_options.py  get_edit_selection.py  get_edit_tool.py  get_file_location.py  get_main_counter_format.py  get_memory_locations_manage_mode.py  get_monitor_output_path.py  get_playback_mode.py  get_ptsl_version.py  get_record_mode.py  get_session_audio_format.py  get_session_audio_pull_settings.py  get_session_audio_rate_pull_settings.py  get_session_bit_depth.py  (+81 more)
tests/: test_builders.py  test_client.py  test_engine.py  test_util.py
