[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "py-ptsl"
authors = [{name = "Jamie Hardt", email = "jamiehardt@me.com"}]
readme = "README.md"
dynamic = ["version", "description"]
license = {file = 'LICENSE'}
requires-python = "~=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.8",
  "Topic :: Multimedia :: Sound/Audio :: Editors",
]
keywords = [
  "pro tools", 
  "scripting", 
  "grpc", 
  "automation", 
  "avid"
]
dependencies = [
    'grpcio >= 1.51.1', 
    'protobuf >= 4.21.12'
]

[tool.flit.module]
name = "ptsl"

[project.optional-dependencies]
doc = [
    'sphinx >= 5.3.0',
    'sphinx_rtd_theme >= 1.1.1',
]
dev = [
    'grpcio-tools >= 1.53.0'
]

[project.urls]
Home = "https://github.com/iluvcapra/py-ptsl"
Source = "https://github.com/iluvcapra/py-ptsl"
Tracker = "https://github.com/iluvcapra/py-ptsl/issues"
Documentation = "https://py-ptsl.readthedocs.io"

[tool.pylint.'MESSAGES CONTROL']
ignored-modules = [
    "ptsl.PTSL_pb2",
    "ptsl.PTSL_pb2_grpc"
]

[tool.pyright]
typeCheckingMode = "basic"
exclude = [
    "ptsl/PTSL_pb2.py",
    "ptsl/PTSL_pb2_grpc.py"
]

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]
