# https://python-poetry.org/docs/pyproject/

[tool.poetry]
name = "py-ptsl"
version = "500.1.1"
description = "Native Python PTSL (Pro Tools Scripting Library) RPC interface"
authors = ["Jamie Hardt <jamiehardt@me.com>"]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.8",
  "Topic :: Multimedia :: Sound/Audio :: Editors",
]
homepage = "https://github.com/iluvcapra/py-ptsl"
repository = "https://github.com/iluvcapra/py-ptsl"
documentation = "https://py-ptsl.readthedocs.io"
keywords = [
  "pro tools", 
  "scripting", 
  "grpc", 
  "automation", 
  "avid"
]
packages = [{ include = 'ptsl' }]

[tool.poetry.urls]
Tracker = "https://github.com/iluvcapra/py-ptsl/issues"

[tool.poetry.dependencies]
python = "^3.8"
grpcio = ">= 1.51.1"
protobuf = "~= 5.26.1"
sphinx_rtd_theme = {version= '>= 1.1.1', optional=true}
sphinx = {version= '>= 5.3.0', optional=true}

[tool.poetry.group.dev.dependencies]
grpcio-tools = {version=">= 1.53.0", optional=true}

[tool.poetry.extras]
doc = ['sphinx', 'sphinx_rtd_theme']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
ignored-modules = [
    "ptsl.PTSL_pb2",
    "ptsl.PTSL_pb2_grpc"
]

[tool.pyright]
typeCheckingMode = "basic"
exclude = [
    "ptsl/PTSL_pb2.py",
    "ptsl/PTSL_pb2_grpc.py"
]

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]
